[package]
name = "c2-telemetry-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
env_logger = "0.10.0"
log = "0.4.17"
pcap = "1.0.0"
rumqttc = "0.20.0"
serde = { version = "1.0.156", features = ["derive"] }
